# picea

./: .flake8  .gitignore  .travis.yml  404.html  CONTRIBUTING.md  LICENSE  README.md  _.coveragerc  _setup.cfg  _setup.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: ci.yml  docs.yml  pythonpackage.yml  tests.yml
API/ontology/: index.html
API/sequence/: index.html
API/tree/: index.html
CONTRIBUTING/: index.html
LICENSE/: index.html
docs/: README.md  requirements.txt
docs/API/: ontology.md  sequence.md  tree.md
docs/css/: material.css
docs/examples/: ontology.ipynb  ontology.pct.ipynb  ontology.pct.py  sequence annotation.ipynb_  sequence_annotation.ipynb  sequence_interval.ipynb  tree.ipynb
docs/examples/data/: multiple_sequence_alignment.fasta  multiple_sequence_alignment.json  tree.json  tree.newick
examples/: sequence annotation.ipynb  sequence collection.ipynb  sklearn clustering.ipynb  tree.ipynb
examples/data/: HCT.fasta  genemodel.gff3  genemodel.json
examples/ontology/: index.html
examples/ontology.pct/: index.html
examples/sequence_annotation/: index.html
examples/sequence_interval/: index.html
examples/tree/: index.html
picea/: __init__.py  bootstrap.py  dag.py  neighbor_joining.py  ontology.py  sequence.py  tests.py  tree.py
picea/algorithms/: bootstrap.py
search/: search_index.json
source/: conf.py  index.rst
source/conf/: index.html
tests/: annotation_tests.py  sequence_tests.py  tree_tests.py
tests/data/: fasttree.quoted_labels.newick  test.fasta  test.gff
