[tool.poetry]
name = "picea"
version = "0.0" # this is automatically filled based on __init__.py
description = "A lightweight python library for working with trees and biological sequence collections"
authors = ["Rens Holmer"]
readme = "README.md"
license = "MIT"
classifiers = [
            'Development Status :: 3 - Alpha',
            'Natural Language :: English',
            'Operating System :: MacOS',
            'Operating System :: Microsoft :: Windows',
            'Operating System :: POSIX',
            'Operating System :: Unix',
            'Intended Audience :: Developers',
            'Intended Audience :: Science/Research',
            'Topic :: Scientific/Engineering :: Bio-Informatics',
            'Topic :: Utilities'
        ]
repository = 'https://github.com/holmrenser/picea'

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
numpy = "^1.22.2"
matplotlib = "^3.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^22.1.0"
flake8 = "^4.0.1"
coverage = {extras = ["toml"], version = "^6.3.1"}
coveralls = "^3.3.1"
mkdocs = "^1.2.3"
mkapi = "^1.0.14"
mkdocs-material = "^8.1.11"
mkdocs-jupyter = "^0.20.0"
mkdocstrings = "^0.18.0"
jupyter = "^1.0.0"
ipykernel = "^6.9.1"
scipy = "^1.8.0"
scikit-learn = "^1.0.2"

[tool.poetry-version-plugin]
source = "init"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--verbose --doctest-modules"
testpaths = ["picea","tests"]
python_classes = "*Tests"
python_functions = "test*"
python_files = "*tests.py"

[tool.coverage.run]
branch = true
command_line = "-m pytest"

[tool.coverage.report]
omit = ["tests/*", "*__init__.py"]
